# Tripatouilleur

./: LICENSE  README.md  pyproject.toml
src/tripa/: __init__.py
src/tripa/tripa/: __init__.py  create.py  io.py  reference.py
src/tripa/tripa/forwards_tripa/images/: f_color_ghost.py
src/tripatouilleur/: __init__.py
src/tripatouilleur/tripa/: core.py  io_tripa.py  test.py
src/tripatouilleur/tripa/forwards_tripa/images/: f_alpha.py  f_blur.py  f_chat.py
